another section added

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                     <img src="images/how-it-works.png" alt="how it works">
                 </div>
             </div>
+            </div>
             <!-- end of the site sections -->
 
             <!-- ==================================================== -->
@@ -658,9 +659,74 @@
                 <!-- product list section -->
             </div>
             <!-- end of the product section -->
+            <!-- ======================================= -->
+
+            <div class="influencer-words">
+                <div class="words-text-section">
+                    <div class="some-words">
+                        <span>SOME WORDS FROM OUR</span>
+                    </div>
+                    <!-- some words -->
+
+                    <div class="thick-heading">
+                        <span>INFLUENCERS</span>
+                    </div>
+                    <!-- thick heading -->
+
+                    <div class="words-sub-heading">
+                        <span>JUST SOME OF THE AMAZING INFLUENCERS WE WORK WITH</span>
+                    </div>
+                </div>
+                <!-- words text section -->
+
+                <div class="influencer-word-container">
+
+                    <div class="influencer-names-container">
+                        
+                        <ul class="influencer-names-list">
+                            <li>SNOOP DOGG</li>
+                            <li>BELLA THORNE</li>
+                            <li>FLOYD MEYWEATHER</li>
+                            <li>XENIA TCHOUMI</li>
+                            <li>SARAH BACKMAN</li>
+                            <li>DMX</li>
+                        </ul>
+                        <!-- influencer names list -->
+                    </div>
+                    <!-- influencer names container -->
+
+                    <div class="influencer-pic-desc">
+                        <div class="influencer-img-container">
+                            <img src="/images/influencer-snop-dogg.png" alt="snoop dogg">
+                        </div>
+                        <!-- influencer img container -->
+
+                        <div class="influencer-desc">
+                            <div class="influencer-desc-heading">
+                                <span>TESTIMONIAL</span>
+                            </div>
+                            <!-- influencer desc heading -->
+
+                            <div class="influencer-desc-detail">
+                                <p>
+                                    We developed a great partnership with the Journal Post and we appreciate their dedication to our work. They are great at what they do
+                                </p>
+                            </div>
+                            <!-- influencer desc detail -->
+                        </div>
+                        <!-- influencer desc -->
+                    </div>
+                    <!-- influencer pic desc -->
+                </div>
+                <!-- influencer word container -->
+
+            </div>
+            <!-- influencer words -->
+        
     </main>
 
 
+    <!-- ================================================== -->
 
     <!-- scripts -->
     <script src="js/jquery/jquery.js"></script>
