image and links updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Journalpost</title>
+    <title>Storyboard Media</title>
 
     <link rel="stylesheet" href="scss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -122,7 +122,7 @@
                         <span style="font-weight: 400;">Us</span>
                     </div>
                     <!-- end of the section heading -->
-                    <p>Journal Post LLC is an international Media and Tech company that is one of the largest content producers on digital media. We are a team of dedicated experts working day and night to create content, softwares, and applications for millions of users around the globe.</p>
+                    <p>Storyboard Media is an international Media and Tech company that is one of the largest content producers on digital media. We are a team of dedicated experts working day and night to create content, softwares, and applications for millions of users around the globe.</p>
 
                     <p class="section-button">contact us<svg stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" style="margin-left:0.5rem" height="1rem" width="1rem" xmlns="http://www.w3.org/2000/svg"><path d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z" fill="currentColor"></path></svg></p>
                 </div>
@@ -139,7 +139,7 @@
                     </div>
                     <!-- end of the section heading -->
                     <p>
-                        Journal Post is the best partner to bring your ideas to life. We have a dedicated team of experts that caters to your specific needs and delivers world class quality products. We go above and beyond expectations to build lasting customer relationships. Our commitment to deliver on our promises and ensure customer satisfaction is what makes us the best.
+                        Storyboard Media is the best partner to bring your ideas to life. We have a dedicated team of experts that caters to your specific needs and delivers world class quality products. We go above and beyond expectations to build lasting customer relationships. Our commitment to deliver on our promises and ensure customer satisfaction is what makes us the best.
                     </p>
                     <p class="section-button">contact us<svg stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" style="margin-left:0.5rem" height="1rem" width="1rem" xmlns="http://www.w3.org/2000/svg"><path d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z" fill="currentColor"></path></svg></p>
                 </div>
@@ -158,7 +158,7 @@
                     <span style="font-weight: 400;">SERVICES</span>
                 </div>
                 <div class="section-sub-heading">
-                    <span>JOURNALPOST</span>
+                    <span>Storyboard Media</span>
                 </div>
                 <!-- ============================= -->
 
@@ -236,7 +236,7 @@
                     </div>
                     <!-- end of the influencer-heading -->
                     <div class="section-sub-heading">
-                        <span>JOURNAL POST</span>
+                        <span>Storyboard Media</span>
                     </div>
                 </div>
                 <!-- end of the influencer-text-section -->
@@ -513,7 +513,7 @@
                     </div>
                     <!-- end of the section heading -->
                     <div class="section-sub-heading">
-                        <span style="color: white;">JOURNALPOST</span>
+                        <span style="color: white;">Storyboard Media</span>
                     </div>
                 </div>
                 <!-- product text section -->
@@ -524,23 +524,23 @@
 
                         <div class="product-list-item">
                             <div class="product-list-img-container">
-                                <img src="images/product-koala.png" alt="koala">
+                                <img src="images/product-storyart.jpeg" alt="Story art">
                             </div>
                             <!-- product list img container -->
                             <div class="product-list-heading-container">
                                 <div class="p-list-heading">
-                                    <span>KOALA</span>
+                                    <span>Art Studio</span>
                                 </div>
                                 <!-- p list heading -->
                             </div>
                             <!-- product list heading container -->
                             <div class="product-description">
                                 <p>
-                                    The Koala is an online digital platform for animal lovers and pet owners. We want our audience to not only be aware of animal rights, but also know how to love and take care of all living things.
+                                    Art Studio is an online digital platform for art lovers. We want our audience to be aware of underrated artist.
                                 </p>
                             </div>
                             <!-- product description -->
-                            <div class="product-site-link">
+                            <div class="product-site-link" style="display: none;">
                                 <p>
                                     VISIT KOALA WEBSITE 
                                     <svg stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" style="margin-left:0.5rem" height="1rem" width="1rem" xmlns="http://www.w3.org/2000/svg"><path d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z" fill="currentColor"></path></svg>
@@ -567,7 +567,7 @@
                                 </p>
                             </div>
                             <!-- product description -->
-                            <div class="product-site-link">
+                            <div class="product-site-link" style="display: none;">
                                 <p>
                                     VISIT STORY TRAP WEBSITE 
                                     <svg stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" style="margin-left:0.5rem" height="1rem" width="1rem" xmlns="http://www.w3.org/2000/svg"><path d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z" fill="currentColor"></path></svg>
@@ -594,7 +594,7 @@
                                 </p>
                             </div>
                             <!-- product description -->
-                            <div class="product-site-link">
+                            <div class="product-site-link" style="display: none;">
                                 <p>
                                     VISIT SNOOPED WEBSITE 
                                     <svg stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" style="margin-left:0.5rem" height="1rem" width="1rem" xmlns="http://www.w3.org/2000/svg"><path d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z" fill="currentColor"></path></svg>
@@ -658,7 +658,7 @@
 
                             <div class="influencer-desc-detail">
                                 <p>
-                                    They sure know how to make your presence felt online. I am glad I entrusted the Journal Post with the job
+                                    They sure know how to make your presence felt online. I am glad I entrusted the Storyboard Media with the job
                                 </p>
                             </div>
                             <!-- influencer desc detail -->
@@ -681,7 +681,7 @@
 
                             <div class="influencer-desc-detail">
                                 <p>
-                                    I needed an expert team to handle my business and the Journal Post proved to be the one. I couldn't be more pleased with their performance
+                                    I needed an expert team to handle my business and the Storyboard Media proved to be the one. I couldn't be more pleased with their performance
                                 </p>
                             </div>
                             <!-- influencer desc detail -->
@@ -704,7 +704,7 @@
 
                             <div class="influencer-desc-detail">
                                 <p>
-                                    We developed a great partnership with the Journal Post and we appreciate their dedication to our work. They are great at what they do
+                                    We developed a great partnership with the Storyboard Media and we appreciate their dedication to our work. They are great at what they do
                                 </p>
                             </div>
                             <!-- influencer desc detail -->
